# OpenGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  glad.c  hello_window  main.cpp  triangle.cpp
classes/: Triangle.h
classes/shaders/: fragment.glsl  vertex.glsl
dependencies/glad/: glad.h
